--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Flask-app workflow
+name: yamdb_final workflow
 
 on: [push]
 
@@ -23,7 +23,7 @@ jobs:
       run: flake8 .
 
     - name: Test with pytest
-      run: pytest tests.py
+      run: pytest
   
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -43,32 +43,32 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: greg720716/flask-app:latest
+          tags: greg720716/yamdb_final:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          script: |
-            sudo docker pull greg720716/flask-app
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 greg720716/flask-app
+  #deploy:
+  #  runs-on: ubuntu-latest
+  #  needs: build_and_push_to_docker_hub
+  #  steps:
+  #    - name: executing remote ssh commands to deploy
+  #      uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.HOST }}
+  #        username: ${{ secrets.USER }}
+  #        key: ${{ secrets.SSH_KEY }}
+  #        passphrase: ${{ secrets.PASSPHRASE }}
+  #        script: |
+  #          sudo docker pull greg720716/flask-app
+  #          sudo docker stop $(sudo docker ps -a -q)
+  #          sudo docker run --rm -d -p 5000:5000 greg720716/flask-app
 
-  send_message:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+  #send_message:
+  #  runs-on: ubuntu-latest
+  #  needs: deploy
+  #  steps:
+  #    - name: send message
+  #      uses: appleboy/telegram-action@master
+  #      with:
+  #        to: ${{ secrets.TELEGRAM_TO }}
+  #        token: ${{ secrets.TELEGRAM_TOKEN }}
+  #        message: ${{ github.workflow }} успешно выполнен!
 
