--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -45,10 +45,21 @@ jobs:
           push: true
           tags: greg720716/yamdb_final:latest
 
-  #deploy:
-  #  runs-on: ubuntu-latest
-  #  needs: build_and_push_to_docker_hub
-  #  steps:
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          source: ".env,docker-compose.yaml,nginx/default.conf"
+          target: "project"
   #    - name: executing remote ssh commands to deploy
   #      uses: appleboy/ssh-action@master
   #      with:
