--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -59,18 +59,17 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           source: ".env,docker-compose.yaml,nginx/default.conf"
-          target: "project"
-  #    - name: executing remote ssh commands to deploy
-  #      uses: appleboy/ssh-action@master
-  #      with:
-  #        host: ${{ secrets.HOST }}
-  #        username: ${{ secrets.USER }}
-  #        key: ${{ secrets.SSH_KEY }}
-  #        passphrase: ${{ secrets.PASSPHRASE }}
-  #        script: |
-  #          sudo docker pull greg720716/flask-app
-  #          sudo docker stop $(sudo docker ps -a -q)
-  #          sudo docker run --rm -d -p 5000:5000 greg720716/flask-app
+          target: "."
+      #- name: executing remote ssh commands to deploy
+      #  uses: appleboy/ssh-action@master
+      #  with:
+      #    host: ${{ secrets.HOST }}
+      #    username: ${{ secrets.USER }}
+      #    key: ${{ secrets.SSH_KEY }}
+      #    passphrase: ${{ secrets.PASSPHRASE }}
+      #    script: |
+      #      sudo docker-compose down
+      #      sudo docker-compose up --build
 
   #send_message:
   #  runs-on: ubuntu-latest
