--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -60,16 +60,16 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           source: ".env,docker-compose.yaml,nginx/default.conf"
           target: "."
-      #- name: executing remote ssh commands to deploy
-      #  uses: appleboy/ssh-action@master
-      #  with:
-      #    host: ${{ secrets.HOST }}
-      #    username: ${{ secrets.USER }}
-      #    key: ${{ secrets.SSH_KEY }}
-      #    passphrase: ${{ secrets.PASSPHRASE }}
-      #    script: |
-      #      sudo docker-compose down
-      #      sudo docker-compose up --build
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            sudo docker-compose down
+            sudo docker-compose up --build
 
   #send_message:
   #  runs-on: ubuntu-latest
