--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Copy file via ssh password
+        rm -r docker_files
+        mkdir docker_files
+        cd docker_files
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -71,14 +74,14 @@ jobs:
             sudo docker-compose down
             sudo docker-compose up --build
 
-  #send_message:
-  #  runs-on: ubuntu-latest
-  #  needs: deploy
-  #  steps:
-  #    - name: send message
-  #      uses: appleboy/telegram-action@master
-  #      with:
-  #        to: ${{ secrets.TELEGRAM_TO }}
-  #        token: ${{ secrets.TELEGRAM_TOKEN }}
-  #        message: ${{ github.workflow }} успешно выполнен!
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен!
 
