--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -53,8 +53,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Copy file via ssh password
         rm -r docker_files
-        mkdir docker_files
-        cd docker_files
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -62,7 +60,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           source: ".env,docker-compose.yaml,nginx/default.conf"
-          target: "."
+          target: "docker_files"
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -71,6 +69,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            cd docker_files
             sudo docker-compose down
             sudo docker-compose up --build
 
