--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: greg720716/yamdb_final:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -71,8 +71,9 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd docker_files
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final
             sudo docker-compose down
-            sudo docker-compose up --build
+            sudo docker-compose up -d --build
 
   send_message:
     runs-on: ubuntu-latest
