Change workflow algorithm

--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -25,6 +25,10 @@ jobs:
     - name: Test with pytest
       run: pytest
   
+on:
+  push:
+    branches: [jopa]
+jobs:    
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
