--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -24,13 +24,10 @@ jobs:
 
     - name: Test with pytest
       run: pytest
-  
-on:
-  push:
-    branches: [jopa]
-jobs:    
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
+    if: ${{ github.ref == 'jopa' }}
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -50,6 +47,8 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
 
   deploy:
+    name: Deploy images to server
+    if: ${{ github.ref == 'jopa' }}
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
@@ -80,6 +79,7 @@ jobs:
             sudo docker-compose up -d --build
 
   send_message:
+    name: Send message to Telegram
     runs-on: ubuntu-latest
     needs: deploy
     steps:
