--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -27,7 +27,7 @@ jobs:
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/jopa' }}
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -48,7 +48,7 @@ jobs:
 
   deploy:
     name: Deploy images to server
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/jopa' }}
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
